kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dashboard.finops.local
    - api.finops.local
    secretName: finops-tls
  rules:
  - host: api.finops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finops-backend-svc
            port:
              number: 8000
  - host: dashboard.finops.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finops-frontend-svc
            port:
              number: 80
